--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@
 .raleway{
   font-family: Raleway;
 }
-.inne{
+.inner{
   width: 1100px;
   margin: 0 auto;
 }
@@ -31,6 +31,7 @@
   position: fixed;
   background-color: #fff;
   width: 100%;
+  z-index: 1;
 }
 .header i{
   font-size: 40px;
@@ -46,10 +47,11 @@
 .botton:hover{
   color: #333;
 }
+.main{
+  padding-top: 70px;
+}
 .heading{
   background-color: #f2f2f2;
-}
-.headingbox{
   padding: 250px 0;
 }
 .caption{
@@ -68,57 +70,64 @@
   background-color: #74cfae;
   padding-top: 50px;
 }
+.iphone{
+  vertical-align: bottom;
+}
 .box{
-  width: 750px;
+  width: 650px;
   word-break: break-all;
-  margin-left: 130px;
+  margin-left: 200px;
   color: #fff;
-  vertical-align: top;
+  vertical-align : 650%;
 }
 .index{
   font-size: 24px;
-  padding: 35px;
 }
 .text{
-  width: 650px;
-}
-.article_text{
-  font-size: 24px;
-  padding-top: 60px;
-  margin-bottom: 40px;
+  margin: 0 auto;
+  margin-top: 35px;
 }
 .article{
   width: 100%;
   background-color: #f2f2f2;
+  padding-top: 60px;
+  padding-bottom: 70px;
 }
-.img{
+.article_text{
+  font-size: 24px;
+}
+.imgbox{
+  margin-top: 40px;
+  font-size: 0;
+}
+.image{
   margin-left: 100px;
-  width: 250px;
-  height: 250px;
   opacity: 0.7;
   transition-duration: 0.3s;
 }
-.img:hover{
+.image:first-child{
+  margin-left: 0;
+}
+.image:nth-child(4){
+  margin-left: 0;
+}
+.image:nth-child(n+4){
+  margin-top: 80px;
+}
+.image:hover{
   opacity: 1.0;
 }
-.img:nth-child(-n+4){
-  padding-bottom: 80px;
-}
-.img:nth-child(2){
-  margin-left: 0;
-}
-.img:nth-child(5){
-  margin-left: 0;
-}
 .subbox{
-  padding-top: 90px;
-  padding-bottom: 70px;
+  margin-top: 90px;
 }
 .subtext{
-  padding-right: 90px;
   width: 550px;
   color: #4e4e4e;
   font-weight: 300;
+}
+.buttonbox{
+  padding-left: 90px;
+  vertical-align: top;
 }
 .article_button{
   background-color: #74cfae;
@@ -165,11 +174,9 @@
 }
 .footer{
   background-color: #74cfae;
-  margin: 0;
-  padding: 0;
+  padding: 20px 50px 25px 0;
 }
 .footer_text{
   color: #fff;
   text-align: right;
-  padding: 20px 50px 25px 0;
 }
