--- a/css/style.css
+++ b/css/style.css
@@ -107,7 +107,7 @@
 .image:first-child{
   margin-left: 0;
 }
-.image:nth-child(4){
+.image:nth-child(4n){
   margin-left: 0;
 }
 .image:nth-child(n+4){
@@ -125,7 +125,7 @@
   font-weight: 300;
 }
 .buttonbox{
-  padding-left: 90px;
+  margin-left: 90px;
   vertical-align: top;
 }
 .article_button{
@@ -140,12 +140,15 @@
   padding-top: 70px;
   padding-bottom: 100px;
 }
+.section_second_box{
+  margin-top: 70px;
+  font-size: 0;
+}
 .section_second_text{
   color: #fff;
   font-size: 25px;
 }
 .figure{
-  margin-top: 70px;
   margin-left: 180px;
   font-size:0;
 }
@@ -162,10 +165,14 @@
   padding-bottom: 200px;
   background-color: #f2f2f2;
 }
+.nav_botton{
+  font-size: 0;
+}
 .sns{
+  width: 185px;
+  padding: 30px 0;
   font-size: 50px;
   color: #74cfae;
-  padding: 25px 92.5px;
   transition-duration: 0.3s;
 }
 .sns:hover{
