--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,6 @@
 .body{
   font-family: Lato;
 }
-.center{
-  text-align: center;
-}
 .inline{
   display: inline-block;
 }
@@ -25,6 +22,9 @@
 .inner{
   width: 1100px;
   margin: 0 auto;
+}
+.center{
+  text-align: center;
 }
 .header{
   padding: 15px 0;
@@ -107,7 +107,7 @@
 .image:first-child{
   margin-left: 0;
 }
-.image:nth-child(4n){
+.image:nth-child(3n+4){
   margin-left: 0;
 }
 .image:nth-child(n+4){
@@ -170,7 +170,6 @@
 }
 .sns{
   width: 185px;
-  padding: 30px 0;
   font-size: 50px;
   color: #74cfae;
   transition-duration: 0.3s;
@@ -185,4 +184,10 @@
 .footer_text{
   color: #fff;
   text-align: right;
+}
+a {
+  display: inline-block;
+}
+.icon{
+  padding: 30px 0;
 }
