--- a/css/style.css
+++ b/css/style.css
@@ -5,27 +5,34 @@
   display: block;
   clear: both;
 }
+
 .body{
   font-family: Lato;
 }
+
 .inline{
   display: inline-block;
 }
+
 .subfont{
   word-break: keep-all;
   font-size: 20px;
   line-height: 30px;
 }
+
 .raleway{
   font-family: Raleway;
 }
+
 .inner{
   width: 1100px;
   margin: 0 auto;
 }
+
 .center{
   text-align: center;
 }
+
 .header{
   padding: 15px 0;
   position: fixed;
@@ -33,9 +40,11 @@
   width: 100%;
   z-index: 1;
 }
+
 .header i{
   font-size: 40px;
 }
+
 .botton{
   font-size: 12px;
   padding: 14px 12px;
@@ -44,34 +53,42 @@
   float: right;
   transition-duration: 0.3s;
 }
+
 .botton:hover{
   color: #333;
 }
+
 .main{
   padding-top: 70px;
 }
+
 .heading{
   background-color: #f2f2f2;
   padding: 250px 0;
 }
+
 .caption{
   font-size: 90px;
   color: #74cfae;
   font-weight: 700;
 }
+
 .caption_sub{
   font-size: 30px;
   color: #c0c0c0;
   margin-top: 20px;
 }
+
 .section-fast{
   width: 100%;
   background-color: #74cfae;
   padding-top: 50px;
 }
+
 .iphone{
   vertical-align: bottom;
 }
+
 .box{
   width: 650px;
   word-break: break-all;
@@ -79,55 +96,69 @@
   color: #fff;
   vertical-align : 650%;
 }
+
 .index{
   font-size: 24px;
 }
+
 .text{
   margin: 0 auto;
   margin-top: 35px;
 }
+
 .article{
   width: 100%;
   background-color: #f2f2f2;
   padding-top: 60px;
   padding-bottom: 70px;
 }
+
 .article_text{
   font-size: 24px;
 }
+
 .imgbox{
   margin-top: 40px;
   font-size: 0;
 }
+
 .image{
   margin-left: 100px;
   opacity: 0.7;
   transition-duration: 0.3s;
 }
+
 .image:first-child{
   margin-left: 0;
 }
+
 .image:nth-child(3n+4){
   margin-left: 0;
 }
+
 .image:nth-child(n+4){
   margin-top: 80px;
 }
+
 .image:hover{
   opacity: 1.0;
 }
+
 .subbox{
   margin-top: 90px;
 }
+
 .subtext{
   width: 550px;
   color: #4e4e4e;
   font-weight: 300;
 }
+
 .buttonbox{
   margin-left: 90px;
   vertical-align: top;
 }
+
 .article_button{
   background-color: #74cfae;
   font-size: 12px;
@@ -135,59 +166,71 @@
   color: #fff;
   vertical-align: top;
 }
+
 .section_second{
   background-color: #4e4e4e;
   padding-top: 70px;
   padding-bottom: 100px;
 }
+
 .section_second_box{
   margin-top: 70px;
   font-size: 0;
 }
+
 .section_second_text{
   color: #fff;
   font-size: 25px;
 }
+
 .figure{
   margin-left: 180px;
   font-size:0;
 }
+
 .figure:first-child{
   margin-left: 0;
 }
+
 .figcaption{
   color: #fff;
   font-size: 16px;
   line-height: 50px;
 }
+
 .nav{
   padding-top: 200px;
   padding-bottom: 200px;
   background-color: #f2f2f2;
 }
+
 .nav_botton{
   font-size: 0;
 }
+
 .sns{
-  width: 185px;
   font-size: 50px;
   color: #74cfae;
   transition-duration: 0.3s;
 }
+
 .sns:hover{
   background-color: #fff;
 }
+
 .footer{
   background-color: #74cfae;
   padding: 20px 50px 25px 0;
 }
+
 .footer_text{
   color: #fff;
   text-align: right;
 }
-a {
-  display: inline-block;
-}
+
 .icon{
   padding: 30px 0;
+  width: 185px;
+  cursor: pointer;
+  color: #74cfae;
 }
