--- a/css/style.css
+++ b/css/style.css
@@ -33,6 +33,10 @@
   text-align: center;
 }
 
+.position{
+  position: relative;
+}
+
 .header{
   padding: 15px 0;
   position: fixed;
@@ -46,11 +50,14 @@
 }
 
 .botton{
+  position: absolute;
   font-size: 12px;
   padding: 14px 12px;
   background-color: #74cfae;
   color: #fff;
-  float: right;
+  top: 0;
+  right: 0;
+  width: max-content;
   transition-duration: 0.3s;
 }
 
@@ -231,6 +238,199 @@
 .icon{
   padding: 30px 0;
   width: 185px;
-  cursor: pointer;
   color: #74cfae;
 }
+
+@media screen and (max-width: 767px){
+  .inner{
+    width: 97%;
+  }
+
+  .inline{
+    display: block;
+  }
+
+  .botton{
+    position: absolute;
+    font-size: 12px;
+    padding: 14px 12px;
+    background-color: #74cfae;
+    color: #fff;
+    top: 60px;
+    left: 0;
+    right: 0;
+    width: 100%;
+  }
+
+  .span{
+    border: 1px solid #ddd;
+    border-radius: 4px;
+    float: right;
+    width: max-content;
+    padding: 10px;
+  }
+
+  .span i{
+    display: block;
+    background-color: #ddd;
+    width: 25px;
+    height: 2px;
+    margin-top: 4px;
+  }
+
+  .span i:first-child{
+    margin-top: 0;
+  }
+
+  .heading{
+    background-color: #f2f2f2;
+    padding: 160px 0 130px 0;
+  }
+
+  .index{
+    margin-top: 20px;
+  }
+
+  .section-fast{
+    padding: 50px 0 25px 0;
+  }
+
+  .iphone{
+    margin: 0 auto;
+  }
+
+  .box{
+    width: 100%;
+    margin-left: 0;
+    vertical-align : 650%;
+  }
+
+  .imgbox{
+    margin-top: 40px;
+    font-size: 0;
+  }
+  
+  .image{
+    margin-left: 0;
+    opacity: 0.7;
+    transition-duration: 0.3s;
+  }
+  
+  .image:nth-child(n+4){
+    margin-top: 0;
+  }
+
+  .image:nth-child(4){
+    margin-top: 80px;
+  }
+
+  .subtext{
+    width: 100%;
+  }
+
+  .buttonbox{
+    margin-top: 40px;
+    margin-left: 0;
+  }
+
+  .article_button{
+    width: max-content;
+    margin: 0 auto;
+  }
+
+  .figure{
+    margin-left: 0;
+    margin-top: 88px;
+  }
+
+  .figure:first-child{
+    margin-top: 0;
+  }
+
+  .section_second_box{
+    margin-top: 40px;
+  }
+
+  .icon{
+    margin: 0 auto;
+  }
+
+  .nav{
+    padding: 50px 15px 50px 15px;
+  }
+
+}
+
+@media screen and (min-width: 768px)and (max-width: 1199px){
+  .inner{
+    width: 97%;
+  }
+
+  .inline{
+    display: block;
+  }
+  
+  .index{
+    margin-top: 20px;
+  }
+
+  .section-fast{
+    padding: 50px 0 25px 0;
+  }
+
+  .iphone{
+    margin: 0 auto;
+  }
+
+  .imgbox{
+    margin-top: 40px;
+    font-size: 0;
+  }
+  
+  .image{
+    margin-left: 0;
+    opacity: 0.7;
+    transition-duration: 0.3s;
+  }
+
+  .image:nth-child(n+4){
+    margin-top: 0;
+  }
+
+  .image:nth-child(4){
+    margin-top: 80px;
+  }
+
+  .subtext{
+    width: 100%;
+  }
+
+  .buttonbox{
+    margin-top: 40px;
+    margin-left: 0;
+  }
+
+  .article_button{
+    width: max-content;
+    margin: 0 auto;
+  }
+
+  .figure{
+    margin-left: 0;
+    margin-top: 88px;
+  }
+
+  .figure:first-child{
+    margin-top: 0;
+  }
+
+  .section_second_box{
+    margin-top: 40px;
+  }
+
+  .sns{
+    display: inline-block;
+  }
+
+}
+
