boltレスポンシブレビュー３

--- a/css/style.css
+++ b/css/style.css
@@ -241,7 +241,7 @@
   color: #74cfae;
 }
 
-@media screen and (max-width: 767px){
+@media screen and (max-width: 1199px) {
   .inner{
     width: 97%;
   }
@@ -250,25 +250,85 @@
     display: block;
   }
 
-  .botton{
-    top: 60px;
-    width: 100%;
-    margin: 0 calc(50% - 50vw);
-    left: 0;
+  .iphone{
+    margin: 0 auto;
   }
 
-  .span{
-    border: 1px solid #ddd;
-    border-radius: 4px;
-    float: right;
+  .box{
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+
+  .imgbox{
+    margin-top: 40px;
+    font-size: 0;
+  }
+
+  .image{
+    margin-left: 0;
+    margin: 0 auto;
     width: max-content;
-    padding: 10px;
   }
 
-  .span i{
+  .image:first-child{
+    margin: 0 auto;
+  }
+  
+  .image:nth-child(n+4){
+    margin-top: 0;
+  }
+
+  .image:nth-child(3n+4){
+    margin: 0 auto;
+    margin-top: 80px;
+  }
+
+  .section-fast{
+    padding: 50px 0 25px 0;
+  }
+
+  .buttonbox{
+    margin-top: 40px;
+    margin-left: 0;
+  }
+
+  .article_button{
+    width: max-content;
+    margin: 0 auto;
+  }
+
+  .figure{
+    margin-left: 0;
+    margin-top: 88px;
+  }
+
+  .figure:first-child{
+    margin-top: 0;
+  }
+
+  .section_second_box{
+    margin-top: 40px;
+  }
+
+}
+
+@media screen and (max-width: 767px){
+
+  .botton{
+  text-indent:100%;
+  white-space:nowrap;
+  overflow:hidden;
+  background-color: initial;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 10px;
+  font-size: 0;
+  }
+
+  .botton i{
     display: block;
     background-color: #ddd;
-    width: 25px;
+    width: 30px;
     height: 2px;
     margin-top: 4px;
   }
@@ -282,67 +342,12 @@
     padding: 160px 0 130px 0;
   }
 
-  .index{
-    margin-top: 20px;
-  }
-
-  .section-fast{
-    padding: 50px 0 25px 0;
-  }
-
-  .iphone{
-    margin: 0 auto;
-  }
-
   .box{
-    margin: 0 auto;
     width: 100%;
-  }
-
-  .imgbox{
-    margin-top: 40px;
-    font-size: 0;
-  }
-  
-  .image{
-    margin-left: 0;
-    opacity: 0.7;
-    transition-duration: 0.3s;
-  }
-  
-  .image:nth-child(n+4){
-    margin-top: 0;
-  }
-
-  .image:nth-child(4){
-    margin-top: 80px;
   }
 
   .subtext{
     width: 100%;
-  }
-
-  .buttonbox{
-    margin-top: 40px;
-    margin-left: 0;
-  }
-
-  .article_button{
-    width: max-content;
-    margin: 0 auto;
-  }
-
-  .figure{
-    margin-left: 0;
-    margin-top: 88px;
-  }
-
-  .figure:first-child{
-    margin-top: 0;
-  }
-
-  .section_second_box{
-    margin-top: 40px;
   }
 
   .icon{
@@ -353,77 +358,16 @@
     padding: 50px 15px 50px 15px;
   }
 
+  .icon{
+    width: initial;
+  }
+
 }
 
 @media screen and (min-width: 768px)and (max-width: 1199px){
-  .inner{
-    width: 97%;
-  }
-
-  .inline{
-    display: block;
-  }
-  
-  .index{
-    margin-top: 20px;
-  }
-
-  .section-fast{
-    padding: 50px 0 25px 0;
-  }
-
-  .iphone{
-    margin: 0 auto;
-  }
-
-  .box{
-    margin: 0 auto;
-  }
-
-  .imgbox{
-    margin-top: 40px;
-    font-size: 0;
-  }
-  
-  .image{
-    margin-left: 0;
-    opacity: 0.7;
-    transition-duration: 0.3s;
-  }
-
-  .image:nth-child(n+4){
-    margin-top: 0;
-  }
-
-  .image:nth-child(4){
-    margin-top: 80px;
-  }
 
   .subtext{
     width: 100%;
-  }
-
-  .buttonbox{
-    margin-top: 40px;
-    margin-left: 0;
-  }
-
-  .article_button{
-    width: max-content;
-    margin: 0 auto;
-  }
-
-  .figure{
-    margin-left: 0;
-    margin-top: 88px;
-  }
-
-  .figure:first-child{
-    margin-top: 0;
-  }
-
-  .section_second_box{
-    margin-top: 40px;
   }
 
   .sns{
